--- a/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
+++ b/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
@@ -11,7 +11,8 @@ set(SOURCE_FILES
         ${CVERBSBENCH_SRC_DIR}/IbLib/ib_prot_dom.c
         ${CVERBSBENCH_SRC_DIR}/IbLib/ib_comp_queue.c
         ${CVERBSBENCH_SRC_DIR}/IbLib/ib_shared_recv_queue.c
-        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_queue_pair.c)
+        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_queue_pair.c
+        ${CVERBSBENCH_SRC_DIR}/IbLib/connection.c)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 
