CVerbsBench: Add main

--- a/src/CVerbsBench/cmake/CVerbsBench/CMakeLists.txt
+++ b/src/CVerbsBench/cmake/CVerbsBench/CMakeLists.txt
@@ -4,7 +4,8 @@ message(STATUS "Project " ${PROJECT_NAME})
 include_directories(${CVERBSBENCH_SRC_DIR})
 
 set(SOURCE_FILES
-        ${CVERBSBENCH_SRC_DIR}/threads.c)
+        ${CVERBSBENCH_SRC_DIR}/threads.c
+        ${CVERBSBENCH_SRC_DIR}/main.c)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
