--- a/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
+++ b/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
@@ -4,8 +4,9 @@ message(STATUS "Project " ${PROJECT_NAME})
 include_directories(${CVERBSBENCH_SRC_DIR})
 
 set(SOURCE_FILES
-        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_device.c)
+        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_device.c
+        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_perf_counter.c)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} -libverbs -libnetdisc -libmad)
+target_link_libraries(${PROJECT_NAME} -libverbs -libmad)
