--- a/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
+++ b/src/CVerbsBench/cmake/IbLib/CMakeLists.txt
@@ -5,7 +5,8 @@ include_directories(${CVERBSBENCH_SRC_DIR})
 
 set(SOURCE_FILES
         ${CVERBSBENCH_SRC_DIR}/IbLib/ib_device.c
-        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_perf_counter.c)
+        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_perf_counter.c
+        ${CVERBSBENCH_SRC_DIR}/IbLib/ib_perf_counter_compat.c)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 
