--- a/src/CVerbsBench/cmake/CVerbsBench/CMakeLists.txt
+++ b/src/CVerbsBench/cmake/CVerbsBench/CMakeLists.txt
@@ -4,9 +4,11 @@ message(STATUS "Project " ${PROJECT_NAME})
 include_directories(${CVERBSBENCH_SRC_DIR})
 
 set(SOURCE_FILES
+        ${CVERBSBENCH_SRC_DIR}/main.c
         ${CVERBSBENCH_SRC_DIR}/threads.c
-        ${CVERBSBENCH_SRC_DIR}/main.c)
+        ${CVERBSBENCH_SRC_DIR}/timer.c
+        ${CVERBSBENCH_SRC_DIR}/stats.c)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} IbLib -lpthread)
+target_link_libraries(${PROJECT_NAME} IbLib -lpthread -lm)
