settings.conf: Fix paths

--- a/settings.conf
+++ b/settings.conf
@@ -3,13 +3,13 @@
 # Adjust the filenames/paths here according to your setup.
 # This file is source'd by any scripts requiring the paths.
 
-BENCHMARK_PATH="${HOME}/jib-benchmarks/"
-JAVA_PATH="/usr/lib/jvm/default-java/"
-J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80/"
+BENCHMARK_PATH="${HOME}/jib-benchmarks"
+JAVA_PATH="/usr/lib/jvm/default-java"
+J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80"
 LIBVMA_PATH="${HOME}/libvma.so.8.7.5"
 
 # Settings for hilbert cluster
-#BENCHMARK_PATH="${HOME}/jib-benchmarks/"
-#JAVA_PATH="/software/java/1.8.0_151/"
-#J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80/"
+#BENCHMARK_PATH="${HOME}/jib-benchmarks"
+#JAVA_PATH="/software/java/1.8.0_151"
+#J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80"
 #LIBVMA_PATH="${HOME}/libvma.so.8.7.5"
