--- a/settings.conf
+++ b/settings.conf
@@ -3,12 +3,14 @@
 # Adjust the filenames/paths here according to your setup.
 # This file is source'd by any scripts requiring the paths.
 
+RESULTS_OUTPATH="${HOME}/jib-benchmarks/results"
 BENCHMARK_PATH="${HOME}/jib-benchmarks"
 JAVA_PATH="/usr/lib/jvm/default-java"
 J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80"
 LIBVMA_PATH="${HOME}/libvma.so.8.7.5"
 
 # Settings for hilbert cluster
+#RESULTS_OUTPATH="/scratch_gs/${USER}/jib-benchmark-results"
 #BENCHMARK_PATH="${HOME}/jib-benchmarks"
 #JAVA_PATH="/software/java/1.8.0_151"
 #J9_JAVA_PATH="${HOME}/ibm-java-x86_64-80"
