--- a/src/DisniBench/build.gradle
+++ b/src/DisniBench/build.gradle
@@ -5,7 +5,12 @@ plugins {
     id "com.github.johnrengelman.shadow" version "4.0.4"
 }
 
-sourceCompatibility = 1.8
+compileJava {
+    sourceCompatibility = '11'
+    targetCompatibility = '11'
+    options.encoding = 'UTF-8'
+}
+
 sourceSets.main.java.srcDirs = ['src']
 
 apply plugin: 'c'
@@ -63,9 +68,10 @@ shadowJar {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    implementation 'com.ibm.disni:disni:2.0'
+    implementation 'com.github.hhu-bsinfo:disni:v2.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
